<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_cost_of_service"
        app:srcCompat="@drawable/ic_baseline_store_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="Cost of Service"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/cost_of_service_edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_how_was_the_service"
        app:srcCompat="@drawable/ic_baseline_room_service_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/how_was_the_service"
        app:layout_constraintBottom_toBottomOf="@+id/how_was_the_service"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/how_was_the_service"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
        app:layout_constraintStart_toEndOf="@id/icon_how_was_the_service"
        android:text="How was the service"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/how_was_the_service"
        app:layout_constraintStart_toStartOf="@+id/how_was_the_service"
        android:orientation="vertical"
        android:checkedButton="@id/amazing_20">
        <RadioButton
            android:id="@+id/amazing_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amazing 20"
            />
        <RadioButton
            android:id="@+id/good_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Good 18"
            />
        <RadioButton
            android:id="@+id/okay_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Okay 15"
            />

    </RadioGroup>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_round_up_tip"
        app:srcCompat="@drawable/ic_baseline_call_made_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_up_tip"
        app:layout_constraintBottom_toBottomOf="@+id/round_up_tip"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        android:text="Round up tip?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculate"
        app:layout_constraintTop_toBottomOf="@+id/round_up_tip"
        app:layout_constraintStart_toStartOf="@id/round_up_tip"
        android:text="Calculate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipCalculator.TextView"
        android:id="@+id/tip_amount"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Tip Amount:"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>